--- a/templates/admin/woo-admin_ce-export.css
+++ b/templates/admin/woo-admin_ce-export.css
@@ -1,3 +1,5 @@
+/* Tabbed navigation */
+
 .woocommerce_page_woo_ce h2 .nav-tab {
 	font-size: 16px;
 	line-height:20px;
@@ -7,4 +9,36 @@
 
 .woocommerce_page_woo_ce h2.nav-tab-wrapper {
 	padding-left:7px;
+}
+
+/* Export */
+
+.woocommerce_page_woo_ce #export-type th {
+	padding:0;
+}
+.woocommerce_page_woo_ce #export-type td {
+	padding:0;
+}
+.woocommerce_page_woo_ce .postbox .submit {
+	padding:0.3em 0;
+}
+
+/* Support - Donate / Rate */
+
+.woocommerce_page_woo_ce .support-donate_rate {
+	display:block;
+	float:right;
+}
+.woocommerce_page_woo_ce .support-donate_rate p {
+	margin-top:16px;
+}
+.woocommerce_page_woo_ce .support-donate_rate .star {
+	vertical-align:bottom;
+	display:inline-block;
+	width:17px;
+	height:17px;
+	background:url('images/star.png') no-repeat;
+}
+.woocommerce_page_woo_ce .support-donate_rate span {
+	display:none;
 }
