--- a/templates/admin/woo-admin_ce-export.css
+++ b/templates/admin/woo-admin_ce-export.css
@@ -22,6 +22,11 @@
 .woocommerce_page_woo_ce .postbox .submit {
 	padding:0.3em 0;
 }
+.woocommerce_page_woo_ce textarea#export_log {
+	font:12px Consolas, Monaco, Courier, monospace;
+	width:100%;
+	height:200px;
+}
 
 .woocommerce_page_woo_ce .overview-left {
 	float:left;
