--- a/templates/admin/woo-admin_ce-export.css
+++ b/templates/admin/woo-admin_ce-export.css
@@ -27,6 +27,9 @@
 	width:100%;
 	height:200px;
 }
+.woocommerce_page_woo_ce .separator {
+	border-bottom:1px solid #dfdfdf;
+}
 
 .woocommerce_page_woo_ce .overview-left {
 	float:left;
