* Added: Subscriptions export type * Added: Support for Subscription Key in Subscriptions export * Added: Support for Subscription Status in Subscriptions export * Added: Support for Subscription Name in Subscriptions export * Added: Support for User in Subscriptions export * Added: Support for User ID in Subscriptions export * Added: Support for Order ID in Subscriptions export * Added: Support for Order Status in Subscriptions export * Added: Support for Post Status in Subscriptions export * Added: Support for Start Date in Subscriptions export * Added: Support for Expiration in Subscriptions export * Added: Support for End Date in Subscriptions export * Added: Support for Trial End Date in Subscriptions export * Added: Support for Last Payment in Subscriptions export * Added: Support for Next Payment in Subscriptions export * Added: Support for Renewals in Subscriptions export * Added: Support for Product ID in Subscriptions export * Added: Support for Product SKU in Subscriptions export * Added: Support for Variation ID in Subscriptions export * Added: Support for Coupon Code in Subscription export * Added: Support for Limit Volume in Subscription export * Added: Export type is remembered between screen refreshes * Changed: Moved Product Sorting widget to products.php * Changed: Moved Filter Products by Product Category widget to products.php * Changed: Moved Filter Products by Product Tag widget to products.php * Changed: Moved Filter Products by Product Status widget to products.php
git-svn-id: https://plugins.svn.wordpress.org/woocommerce-exporter/trunk@959557 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/templates/admin/export.css
+++ b/templates/admin/export.css
@@ -25,6 +25,10 @@
 	width:100%;
 	height:200px;
 }
+.woocommerce_page_woo_ce #export_sheet table {
+	width:100%;
+}
+
 .woocommerce_page_woo_ce .separator {
 	border-bottom:1px solid #dfdfdf;
 }
