--- a/templates/admin/export.css
+++ b/templates/admin/export.css
@@ -25,6 +25,10 @@
 	width:100%;
 	height:200px;
 }
+.woocommerce_page_woo_ce #export_sheet {
+	overflow: scroll;
+	margin-bottom:1em;
+}
 .woocommerce_page_woo_ce #export_sheet table {
 	width:100%;
 }
