* Added: Notice when fatal error is encountered from memory/timeout * Fixed: Default to Attribute Name if Label is empty * Fixed: Export Product Attributes in Product export * Added: Support for custom Attributes in Product export * Added: Default Attributes to Product export * Fixed: Attribute taxonomy missing from Order Items: Product Variation in WC 2.2+ * Added: Support for Ship to Multiple Address for Order export * Fixed: Variables not being included in Product export when filtering by Categories/Tags/Brands/Vendors * Added: Delete All archives button to Archives screen
git-svn-id: https://plugins.svn.wordpress.org/woocommerce-exporter/trunk@1123603 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/templates/admin/export.css
+++ b/templates/admin/export.css
@@ -80,6 +80,9 @@
 	display:inline-block;
 	width:120px;
 }
+#woo-ce .auto_method_options li.ftp-options select {
+  width: 25em;
+}
 
 /* Support - Donate / Rate */
 
